# django_REST_framework_project

./: README.md  manage.py  pyproject.toml
.github/workflows/: django.yml
config/: settings.py  urls.py
django_REST_framework_project/: asgi.py  settings.py  urls.py  wsgi.py
drf_app/: admin.py  models.py  serializers.py  serializers_1.py  serializers_2.py  urls.py  views.py  views_1.py  views_2.py
